frontend/packages/erd-core/src/features/erd/components/ERDContent/components/TableNode/TableColumnList/TableColumn/TableColumn.module.css
.wrapper {
  background: var(--node-background);
  transition: background-color var(--default-hover-animation-duration)
    var(--default-timing-function);
}

.wrapper:not(:last-child) {
  border-bottom: 1px solid var(--node-border);
}

.wrapper:last-child {
  border-bottom-left-radius: var(--border-radius-md);
  border-bottom-right-radius: var(--border-radius-md);
}

.wrapper:hover {
  background-color: var(--pane-background-hover);
}

.wrapper.highlightRelatedColumn {
  background-color: var(--primary-overlay-10);
  transition: background-color var(--default-hover-animation-duration)
    var(--default-timing-function);
}

.wrapper.highlightRelatedColumn:hover {
  background-color: var(--primary-overlay-15);
}

.wrapperWithDiff {
  display: grid;
  grid-template-columns: auto 1fr;
}

.columnWrapper {
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  padding: var(--spacing-2);
  gap: var(--spacing-1half);
  color: var(--global-foreground);
  font-size: var(--font-size-3);
  line-height: normal;
  position: relative;
  overflow-x: hidden;
}

.diffBox {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 36px;
  height: 100%;
  background-color: var(--global-muted-background);
}

.wrapper:last-child .diffBox {
  border-bottom-left-radius: var(--border-radius-md);
}

.primaryKeyIcon {
  color: var(--primary-accent);
}

.linkIcon {
  color: var(--primary-accent);
}

.diamondIcon {
  color: var(--overlay-70);
}

.columnNameWrapper {
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
  gap: var(--spacing-3);
}

.wrapper:last-child .columnNameWrapper {
  border-bottom-right-radius: var(--border-radius-md);
}

.columnType {
  color: var(--overlay-70, rgba(255, 255, 255, 0.7));
  text-align: right;
  font-family: var(--code-font);
  font-size: var(--font-size-1);
  font-weight: 400;
  line-height: normal;
  opacity: 0;
  transition: opacity 300ms var(--default-timing-function);
}

:global([data-erd='table-node-highlighted']) .columnType {
  opacity: 1;
}

.handle {
  top: auto;
  opacity: 0;
}

.handle[data-handlepos='right'] {
  transform: translate(50%, 0%);
  right: -17px;
  pointer-events: none;
}

.handle[data-handlepos='left'] {
  transform: translate(-50%, 0%);
  left: -20px;
  pointer-events: none;
}

